0.12.20 
- add whitespace to `<br>` elements in headers. tidy used to put whitespace around `<br>` elements. PPs relied on this behavior, so we're stuck.
- add pagebreak css for EPUB2 boilerplate
- changed log level for empty img[alt] from ERROR to WARNING


0.12.20 November 1, 2022
- add logging for empty img[alt] attributes

0.12.20 October 23, 2022
- don't wipe source credit if there's an update credit from the db.
- require libgutenberg>=0.10.8

0.12.19 October 17, 2022
- tweak boilerplate to align with PG practice
- use `*** START OF THE` instead of `*** START OF THIS`. PG shifted from `THIS` to `THE` around #64000.

0.12.18 October 12, 2022
- changed caching strategy after analysis showed large cost for changes made in 0.12.12

0.12.17 October 6, 2022
- handle pre-html5 type attribute of `ul` properly
- continue processing job queue after a parse failure

0.12.16 October 3, 2022
- fix bug in removal of legacy elements
- add back enclose_text removed in 0.12.14; it wasn't redundant
- when an img is removed, replace it with alt text. fixes #123
- It seems we have to use the EPUB2 method to declare the cover image for EPUB3 files.

0.12.15 October 1, 2022
- fixed bug exposed by implementation of downloaded pubinfo in libgutenberg
- updated libgutenberg to 0.10.5 to fix an older bug revealed by rendering bugfix

0.12.14 September 30, 2022
- add tests for conversion from txt source
- boilerplate marking was duplicating an id. The code was incoherent. Cleaned this up.
- don't turn top-level html comments into non-comments. in BS4, Comment is a subclass of NavigableString! Thanks @G4OEU!
- removed redundant enclose_text()
- `--make=kindle` and `--make=all` no longer make `kindle.noimages`
- stop warning about external links that start with 'https://www.gutenberg.org/'
- More helpful message when file not found

0.12.13 September 23, 2022
- fix reversion in txt production because GutenbergTextParser needs caching

0.12.12 September 22, 2022